commit translated contents

--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -569,6 +569,8 @@
       uid: grpc/diagnostics
     - name: Considérations relatives à la sécurité
       uid: grpc/security
+    - name: Gérer les références Protobuf avec dotnet-GRPC
+      uid: grpc/dotnet-grpc
     - name: Migrer les services gRPC à partir de C-core
       uid: grpc/migration
     - name: Comparer les services gRPC avec les API HTTP
