commit translated contents

--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -1020,6 +1020,8 @@
   items:
     - name: Vue d'ensemble
       uid: performance/performance-best-practices
+    - name: Mémoire et GC
+      uid: performance/memory
     - name: Mise en cache des réponses
       items:
         - name: Vue d'ensemble
