--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -381,14 +381,20 @@
               uid: mvc/views/tag-helpers/builtin-th/environment-tag-helper
             - name: Formulaire
               href: 'mvc/views/working-with-forms.md#the-form-tag-helper'
+            - name: Action de formulaire
+              href: 'mvc/views/working-with-forms.md#the-form-action-tag-helper'
             - name: Image
               uid: mvc/views/tag-helpers/builtin-th/image-tag-helper
             - name: Entrée
               href: 'mvc/views/working-with-forms.md#the-input-tag-helper'
             - name: Etiquette
               href: 'mvc/views/working-with-forms.md#the-label-tag-helper'
+            - name: Lien
+              uid: mvc/views/tag-helpers/builtin-th/link-tag-helper
             - name: Partial
               uid: mvc/views/tag-helpers/builtin-th/partial-tag-helper
+            - name: Script
+              uid: mvc/views/tag-helpers/builtin-th/script-tag-helper
             - name: Sélectionner
               href: 'mvc/views/working-with-forms.md#the-select-tag-helper'
             - name: Textarea
