--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -326,8 +326,6 @@
               uid: host-and-deploy/blazor/server
             - name: Configurer l'éditeur de liens
               uid: host-and-deploy/blazor/configure-linker
-        - name: Exemples
-          href: 'https://github.com/aspnet/samples/tree/master/samples/aspnetcore/blazor'
     - name: Développement côté client
       items:
         - name: Applications monopages
@@ -612,7 +610,7 @@
       uid: test/integration-tests
     - name: Tests de charge et de contrainte
       uid: test/loadtests
-    - name: Résoudre les problèmes
+    - name: Résoudre les problèmes et déboguer
       uid: test/troubleshoot
     - name: Journalisation
       uid: fundamentals/logging/index
@@ -885,15 +883,15 @@
             - name: Vue d'ensemble
               uid: security/authentication/azure-active-directory/index
             - name: Intégrer Azure AD dans une application web
-              href: 'https://azure.microsoft.com/documentation/samples/active-directory-dotnet-webapp-openidconnect-aspnetcore/'
+              href: 'https://github.com/Azure-Samples/ms-identity-aspnetcore-webapp-tutorial'
             - name: Intégrer Azure AD B2C dans une application web
               uid: security/authentication/azure-ad-b2c
             - name: Intégrer Azure AD B2C dans une API web
               uid: security/authentication/azure-ad-b2c-webapi
             - name: Appeler une API web à partir de WPF
-              href: 'https://azure.microsoft.com/documentation/samples/active-directory-dotnet-native-aspnetcore/'
+              href: 'https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore'
             - name: Appeler une API web dans une application web avec Azure AD
-              href: 'https://azure.microsoft.com/documentation/samples/active-directory-dotnet-webapp-webapi-openidconnect-aspnetcore/'
+              href: 'https://github.com/Azure-Samples/active-directory-dotnet-webapp-webapi-openidconnect-aspnetcore'
         - name: Sécuriser les applications ASP.NET Core avec IdentityServer4
           href: 'https://identityserver4.readthedocs.io/'
         - name: Sécuriser les applications ASP.NET Core avec l’authentification Azure App Service (Easy Auth)
@@ -1101,6 +1099,9 @@
       uid: fundamentals/host/hosted-services
     - name: Assemblys d’hébergement au démarrage
       uid: fundamentals/configuration/platform-specific-configuration
+    - name: ASP.NET Core dans les bibliothèques de classes
+      displayName: shared framework
+      uid: fundamentals/target-aspnetcore
     - name: Métapackage Microsoft.AspNetCore.App
       uid: fundamentals/metapackage-app
     - name: Métapackage Microsoft.AspNetCore.All
