--- a/aspnetcore/whats-new/index.yml
+++ b/aspnetcore/whats-new/index.yml
@@ -19,11 +19,11 @@ landingContent:
     links:
     - text: Décembre 2019
       url: 2019-12.md
-    - text: 2019 novembre
+    - text: Novembre 2019
       url: 2019-11.md
-    - text: Octobre 2019
+    - text: 2 octobre 2019
       url: 2019-10.md
-    - text: 2019 septembre
+    - text: Septembre 2019
       url: 2019-09.md
 - title: Participer-contribuer à ASP.NET Core docs
   linkLists:
