--- a/aspnetcore/toc.yml
+++ b/aspnetcore/toc.yml
@@ -702,7 +702,7 @@
         - name: Publier avec Visual Studio pour Mac
           displayName: 'azure, deploy, publish'
           href: /visualstudio/mac/publish-app-svc?toc=/aspnet/core/toc.json&bc=/aspnet/core/breadcrumb/toc.json
-        - name: Publier avec les outils CLI
+        - name: Publier avec l’interface de ligne de commande
           displayName: 'azure, deploy, publish'
           href: /azure/app-service/app-service-web-tutorial-dotnetcore-sqldb?toc=/aspnet/core/toc.json&bc=/aspnet/core/breadcrumb/toc.json
         - name: Publier avec Visual Studio et Git
